# bevy-snake-ai

./: .gitignore  Cargo.toml  README.md  bevy-snake-ai-a927e75cc271f579.js  bevy-snake-ai-e6ce77111d308028.js  index.html  pyproject.toml  train.py  train.ron  xprun.ron
assets/agents/: 128m.roguenet  128m2ad.roguenet  16m.roguenet  16m2ad.roguenet  1b2ad.roguenet  1m.roguenet  256m.roguenet  256m2ad.roguenet  2m.roguenet  32m.roguenet  32m2ad.roguenet  4m.roguenet  500k.roguenet  512m2ad.roguenet  64m.roguenet  64m2ad.roguenet  8m.roguenet
eval-opponents/220729-160238-2snake-128m-ad2-32447984ae7847018b3ba86dc25aa0db/: config.ron  state.agent.msgpack  state.ron
src/: ai.rs  lib.rs  python.rs
